@@ -36,6 +36,41 @@
 	    </p>
           </desc>
 
+        <method type="NSString*" factory="yes">
+          <sel>loadEntity:</sel>
+          <arg type="NSString*">publicID</arg>
+          <sel>at:</sel>
+          <arg type="NSString*">locationURL</arg>
+          <desc>
+	    <p>
+	      This method controls the loading of external entities into
+	      the system.  If it returns an empty string, the entity is not
+	      loaded.  If it returns a filename, the entity is loaded from
+	      that file.  If it returns nil, the default entity loading
+	      mechanism is used.
+	    </p>
+	    <p>
+	      The default entity loading mechanism is to construct a file
+	      name from the locationURL, by replacing all path separators
+	      with underscores, then attempt to locate that file in the DTDs
+	      resource directory of the main bundle, and all the standard
+	      system locations.
+	    </p>
+	    <p>
+	      As a special case, the default loader examines the publicID
+	      and if it is a GNUstep DTD, the loader constructs a special
+	      name from the ID (by replacing dots with underscores and
+	      spaces with hyphens) and looks for a file with that name
+	      and a '.dtd' extension in the GNUstep bundles.
+	    </p>
+	    <p>
+	      NB. This method will only be called if there is no SAX
+	      handler in use, or if the corresponding method in the
+	      SAX handler returns nil.
+	    </p>
+          </desc>
+        </method>
+
         <method type="GSXMLParser*" factory="yes">
           <sel>parser</sel>
           <desc>
